[gd_scene load_steps=8 format=3 uid="uid://cmogs3rwo1l87"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_s1q1j"]
[ext_resource type="Texture2D" uid="uid://ctlsrjay7pq43" path="res://Art/City_Tileset.png" id="1_sfrmi"]
[ext_resource type="PackedScene" uid="uid://d34oxrbprg6r3" path="res://Scenes/shop_menu.tscn" id="3_mq62e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ea0n"]
atlas = ExtResource("1_sfrmi")
region = Rect2(88, 1097, 32, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_30own"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ea0n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ill6"]
size = Vector2(32, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jun5"]
size = Vector2(60, 42)

[node name="shop" type="Area2D"]
script = ExtResource("1_s1q1j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_30own")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_0ill6")

[node name="shop_menu" parent="." instance=ExtResource("3_mq62e")]
visible = false
position = Vector2(-63, -65)

[node name="buy_zone" type="Area2D" parent="."]
position = Vector2(0, -0.5)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="buy_zone"]
position = Vector2(0, 21.5)
shape = SubResource("RectangleShape2D_7jun5")

[connection signal="body_entered" from="buy_zone" to="." method="_on_buy_zone_body_entered"]
[connection signal="body_exited" from="buy_zone" to="." method="_on_buy_zone_body_exited"]
